[gd_scene load_steps=7 format=3 uid="uid://30clpwnyavqw"]

[ext_resource type="LabelSettings" uid="uid://bvh0qdmio8b61" path="res://lg_grey_48.tres" id="1_7hrub"]
[ext_resource type="Script" path="res://scenes/game_ui/game_ui.gd" id="1_pnk8t"]
[ext_resource type="LabelSettings" uid="uid://bwdupwe1hresf" path="res://lg_grey_72.tres" id="2_jpoky"]
[ext_resource type="FontFile" uid="uid://bqn6kdt6xl0gp" path="res://assets/fonts/LuckiestGuy-Regular.ttf" id="3_3pmgm"]
[ext_resource type="AudioStream" uid="uid://cogugjt4yee8f" path="res://assets/audio/jazzyfrenchy.mp3" id="4_plkea"]

[sub_resource type="LabelSettings" id="LabelSettings_7ac6d"]
font = ExtResource("3_3pmgm")
font_size = 48
font_color = Color(0.160784, 0.509804, 0.682353, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.627451)

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pnk8t")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VB1" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MC/VB1"]
layout_mode = 2
text = "LEVEL 0"
label_settings = ExtResource("1_7hrub")

[node name="AttemptsLabel" type="Label" parent="MC/VB1"]
layout_mode = 2
text = "ATTEMPTS: 0"
label_settings = ExtResource("1_7hrub")

[node name="VB2" type="VBoxContainer" parent="MC"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LevelCompleteLabel" type="Label" parent="MC/VB2"]
layout_mode = 2
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_jpoky")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressSpaceLabel" type="Label" parent="MC/VB2"]
layout_mode = 2
text = "PRESS SPACE"
label_settings = SubResource("LabelSettings_7ac6d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompleteBGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_plkea")
